2010-07-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/test/test_component_httpstreamer.py:
	Remove old test

2010-07-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Jan

	* flumotion/common/common.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/encoders/theora/theora.py:
	* flumotion/component/producers/firewire/firewire.py:
	* flumotion/twisted/flavors.py:
	Remove deprecated code from Flumotion 0.5

2010-07-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/componentlist.py:
	* flumotion/twisted/flavors.py:
	operator.methodcaller doesn't appear till python2.6, use itemgetter
	instead and a getter method to pb.RemoteCache

2010-07-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Jan

	* flumotion/admin/assistant/configurationwriter.py:
	* flumotion/admin/connections.py:
	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/admin/gtk/componentlist.py:
	* flumotion/common/bugreporter.py:
	* flumotion/common/python.py:
	* flumotion/component/producers/webcam/wizard_gtk.py:
	* flumotion/manager/config.py:
	Remove compatibility code with python <= 2.4

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_component_video_converter.py:
	Add more checks to make the buildbot happy

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_component_video_converter.py:
	Skip video-converter tests if the version of the 'deinterlace' element
	is too old and doesn't have the method property.

2010-07-07  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/test/Makefile.am:
	* flumotion/test/test_component_video_converter.py (added):
	Simple tests for video-converter and effects.

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/converters/video/video.py:
	Use the the public member effectBin, instead of the method call which
	was finally removed.
