@@ -22,8 +22,7 @@
       </eater>
       <property name="port">8800</property>
       <plugs>
-        <plug socket="flumotion.component.plugs.request.RequestLoggerPlug"
-              type="requestlogger-file">
+        <plug type="requestlogger-file">
           <property name="logfile">/tmp/ogg-test-theora.access.log</property>
         </plug>
       </plugs>
