@@ -1,3 +1,14 @@
+2010-07-08  Xavier Queralt Mateu  <xqueralt@flumotion.com>
+
+	* flumotion/component/combiners/composite/composite.xml:
+	* flumotion/manager/config.py:
+	* flumotion/test/test.xml:
+	* flumotion/test/test_admin_config.py:
+	* flumotion/test/test_config.py:
+	* flumotion/test/test_manager_config.py:
+	* flumotion/test/test_registry.py:
+	Update tests with deprecated content
+
 2010-07-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
 	* flumotion/test/test_component_httpstreamer.py:
